--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,12 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap");
 
+.rescolumn {
+  float: left;
+  width: 33%;
+  padding: 10 10px;
+}
+.castcolumn {
+  float: left;
+  width: 16%;
+  padding: 0 10px;
+}
+
+.cardcolumn {
+  float: left;
+  width: 33%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.resrow {
+  margin: 0 -5px;
+  padding-top: 5%;
+}
+
+/* Clear floats after the columns */
+.resrow:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 .div-container0 {
-  margin-top: 80px;
+  margin-top: 60px;
   margin-left: 30px;
   margin-right: 30px;
   display: flex;
@@ -38,6 +68,7 @@ img {
 }
 .div-overview0 {
   height: 40%;
+  overflow: auto;
   //border: 1px solid brown;
 }
 .div-big-img-continer0 {
@@ -255,5 +286,38 @@ body {
     p b {
       font-style: italic;
     }
+  }
+}
+/* Responsive columns */
+@media screen and (max-width: 1080px) {
+  .div-big-img-container0 {
+    width: 100%;
+    height: 45%;
+  }
+  .div-container0 {
+    margin-top: 180px;
+    display: flex;
+    width: 59%;
+    height: 600px;
+    flex-direction: column-reverse;
+  }
+
+  .cast-center {
+    margin: auto;
+  }
+  .div-left-container0 {
+    width: 100%;
+    height: 55%;
+  }
+  .castcolumn {
+    float: left;
+    width: 55%;
+    padding-bottom: 10px;
+    padding-left: 20px;
+  }
+  .cardcolumn {
+    width: 70%;
+    margin-left: 62px;
+    margin-top: 32px;
   }
 }
